<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <!-- 1. User shall not post any comment that is offending or dicriminating towards any individual/ groups of individuals/organisation. 2. This application must contain content that violates copyright. 3. Not adhering to these rules will result in serious action. Thank you for cooperating! Happy Kibitzing!!! -->

    <TextView
        android:id="@+id/about_us"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="48dp"
        android:gravity="top"
        android:text="@string/about_us"
        android:textAppearance="@style/about_us"
        android:textStyle="bold"
        app:fontFamily="@font/rubik_mono_one_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/have_some_c"
        android:layout_width="366dp"
        android:layout_height="194dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="96dp"
        android:gravity="top"
        android:text="@string/have_some_c"
        android:textAppearance="@style/say_hi_"
        app:fontFamily="@font/rokkitt_variablefont_wght"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/terms_condi"
        android:layout_width="284dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="296dp"
        android:gravity="center_horizontal|top"
        android:lineHeight="45sp"
        android:text="@string/terms_condi"
        android:textAppearance="@style/about_us"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/rubik_mono_one_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/user_shall_"
        android:layout_width="364dp"
        android:layout_height="229dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="372dp"
        android:gravity="top"
        android:text="@string/user_shall_"
        android:textAppearance="@style/say_hi_"
        app:fontFamily="@font/rokkitt_variablefont_wght"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="51dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kibitz_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>