<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/kibitz"
        android:layout_width="126dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/kibitz_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/vector_6"
        android:layout_width="411dp"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kibitz"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/user_7"
        android:layout_width="65dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/user"
        android:contentDescription="@string/todo"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/who"
        android:layout_width="320dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="72dp"
        android:gravity="top"
        android:text="@string/who_am_i_ta"
        android:textAppearance="@style/who_am_i_ta"
        android:textStyle="bold"
        app:fontFamily="@font/rubik_mono_one_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <ImageView
        android:id="@+id/vector_7"
        android:layout_width="411dp"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:background="@drawable/vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/shrey1010_"
        android:layout_width="118dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="172dp"
        android:gravity="top"
        android:text="@string/shrey1010_"
        android:textAppearance="@style/shrey1010_"
        android:fontFamily="@font/rokkitt_variablefont_wght"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="28dp" tools:targetApi="jelly_bean"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/rk_1406_2k_"
        android:layout_width="118dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/rokkitt_variablefont_wght"
        android:gravity="top"
        android:text="@string/rk_1406_2k_"
        android:textAppearance="@style/rk_1406_2k_"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="jelly_bean"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/wanna_shoot"
        android:layout_width="184dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="176dp"
        android:gravity="top"
        android:text="@string/wanna_shoot"
        app:fontFamily="@font/robotomono_variablefont_wght"
        android:textAppearance="@style/chat_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="160dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/dont_talk"
        android:layout_width="184dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="232dp"
        android:gravity="top"
        android:text="@string/dont_talk"
        app:fontFamily="@font/robotomono_variablefont_wght"
        android:textAppearance="@style/chat_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="43dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="652dp"
        android:text="@string/smile"
        android:textSize="36sp"
        android:fontFamily="@font/rokkitt_variablefont_wght"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean"
        android:layout_marginStart="8dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/chatText"
        android:layout_width="306dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="660dp"
        android:fontFamily="@font/rokkitt_variablefont_wght"
        android:textColor="@color/colorGrey"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="60dp" tools:targetApi="jelly_bean"
        android:layout_alignParentStart="true"
        android:importantForAutofill="no"
        android:hint="@string/entert_the_text"
        android:inputType="text" />

    <ImageView
        android:id="@+id/send_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="373dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="657dp"
        android:background="@drawable/send_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        android:layout_marginStart="373dp"
        android:layout_alignParentStart="true" />
</androidx.constraintlayout.widget.ConstraintLayout>